# md-kd-2025

./: .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml  requirements.txt
conf/base/: catalog.yml  credentials.yml
notebooks/: CRISP_DM_WEATHER.ipynb  CRISP_DM_WEATHER_DiegoGallardo.ipynb  CRISP_DM_WEATHER_EV_3.ipynb  CRISP_DM_WEATHER_FINAL_ENTREGA.ipynb  Notebook_Kedro_Australia_Lluvias (2).ipynb  Notebook_Kedro_Australia_Lluvias EV3.ipynb  Prueba de sql.ipynb  Prueba1_m.ipynb  Testing.ipynb
notebooks/.Trash-999/info/: CRISP_DM_WEATHER_COMBINED.ipynb.trashinfo
src/md_kd_2025/: __init__.py  __main__.py  settings.py
