[build-system]
requires = [ "setuptools",]
build-backend = "setuptools.build_meta"

[project]
requires-python = ">=3.9"
name = "md_kd_2025"
readme = "README.md"
dynamic = [ "version",]
dependencies = [ "ipython>=8.10", "jupyterlab>=3.0", "notebook", "kedro~=0.19.12",]

[project.scripts]
md-kd-2025 = "md_kd_2025.__main__:main"

[tool.kedro]
package_name = "md_kd_2025"
project_name = "md-kd-2025"
kedro_init_version = "0.19.12"
tools = "['Data Structure']"
example_pipeline = "False"
source_dir = "src"

[project.entry-points."kedro.hooks"]

[tool.setuptools.dynamic.version]
attr = "md_kd_2025.__version__"

[tool.setuptools.packages.find]
where = [ "src",]
namespaces = false
